tests/script_errors/lexer_bad_hex2/error.txt
Error: 
    1 | let f = 7x0;
      |         ^^^ An invalid hexadecimal
